*Reworked repositioning of windows to sidestep nwjs v1 limitations that appear to remain unaddressed, first focusing on OSX, while also adjusting following cosmetic fixes:   *Changed Atom Properties title for SymAtom as SymAtom Properties (this is to distinguish between the two due to their size differences)   *Fixed frame visibility around flatgui/knob in the 60-hz theme   *Fixed square close button on OSX inside the dropdown dialog

--- a/pd/nw/css/60-hz.css
+++ b/pd/nw/css/60-hz.css
@@ -393,8 +393,8 @@ text.activated {
 
 /* flatgui knob border */
 .flatgui.knob.border {
-    stroke: black;
-    fill: #d9d9d9;
+    stroke: none;
+    fill: none;
 }
 
 /* atom box */
